--- a/listing-detail.html
+++ b/listing-detail.html
@@ -194,69 +194,42 @@
                 </div>
                 <div class="col-sm-8">
                     <div class="title-action">
-                        <a href="#" class="btn btn-primary">Chanels Settings</a>
-                        <div class="btn-group dropdown-store">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <img src="./img/store/1.png" alt="" />
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                    <a href="#"><img src="./img/store/1.png" alt="Shopee" /> Shopee</a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="./img/store/2.png" alt="Magento" /> Magento</a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="./img/store/3.png" alt="JD Central" /> JD
-                                        Central</a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="./img/store/4.png" alt="WooCommerce" />
-                                        WooCommerce</a>
-                                </li>
-                            </ul>
-                        </div>
+                        <button type="button" class="btn btn-default">Publish</button>
+                        <button type="button" class="btn btn-default">Save Changes</button>
+                        <button type="button" class="btn btn-default">Delete</button>
                     </div>
                 </div>
             </div>
 
             <div class="wrapper wrapper-content">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4 col-lg-3">
                         <div class="ibox float-e-margins">
                             <div class="ibox-title">
                                 <h5>Listing Details</h5>
                             </div>
                             <div class="ibox-content">
-                                <img src="http://lorempixel.com/640/480/technics" alt="" class="img-responsive">
-                                <h2>
-                                    This is standard IN+ Panel<br />
-                                </h2>
-                                <p>
-                                    <strong>Lorem ipsum dolor</strong>
-                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-                                    magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-                                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. </p>
-                                <p>
-                                    <small>
-                                        Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
-                                        justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu
-                                        pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
-                                        nisi.
-                                    </small>
-                                </p>
-                            </div>
-                            <div class="ibox-footer">
-                                <span class="pull-right">
-                                    The righ side of the footer
-                                </span>
-                                This is simple footer example
+                                <img src="http://lorempixel.com/640/480/technics" alt="" class="img-responsive m-b">
+                                <h5>Listing Status</h5>
+                                <button type="button" class="btn btn-primary btn-block">Draft</button>
+                                <a href="#" class="btn btn-default btn-block">View product
+                                    <small class="text-muted">(unlink)</small></a>
+                                <div class="hr-line-dashed"></div>
+                                <h5>Sale Chanels</h5>
+                                <div class="d-flex align-items-center">
+                                    <span class="m-r-xs"><img src="img/store/1.png" alt="Shopee"
+                                            class="img-responsive"></span>
+                                    <span>Shopee</span>
+                                </div>
+                                <div class="hr-line-dashed"></div>
+                                <h5>Last Modified</h5>
+                                <p>Oct 25, 2017 7:49PM</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-9"></div>
+                    <div class="col-md-8 col-lg-9">
+
+                    </div>
                 </div>
             </div>
         </div>
