--- a/listing.html
+++ b/listing.html
@@ -231,105 +231,103 @@
                 <h5>Filter Listing</h5>
               </div>
               <div class="ibox-content">
-                <div class="file-manager">
-                  <div class="form-group">
-                    <select data-placeholder="Search" class="chosen-select" style="width:100%;" tabindex="2">
-                      <option value="">Search</option>
-                      <option value="United States">United States</option>
-                      <option value="United Kingdom">United Kingdom</option>
-                      <option value="Afghanistan">Afghanistan</option>
-                      <option value="Aland Islands">Aland Islands</option>
-                    </select>
+                <div class="form-group">
+                  <select data-placeholder="Search" class="chosen-select" style="width:100%;" tabindex="2">
+                    <option value="">Search</option>
+                    <option value="United States">United States</option>
+                    <option value="United Kingdom">United Kingdom</option>
+                    <option value="Afghanistan">Afghanistan</option>
+                    <option value="Aland Islands">Aland Islands</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <select data-placeholder="Search" class="chosen-select" multiple style="width:100%;" tabindex="4">
+                    <option value="">Search</option>
+                    <option value="United States">United States</option>
+                    <option value="United Kingdom">United Kingdom</option>
+                    <option value="Afghanistan">Afghanistan</option>
+                    <option value="Aland Islands">Aland Islands</option>
+                  </select>
+                </div>
+                <div class="hr-line-dashed"></div>
+                <h5>Product Link</h5>
+                <div class="form-group">
+                  <div class="i-checks">
+                    <label>
+                      <input type="radio" value="option1" name="a" />
+                      <i></i> Linked
+                    </label>
+                    <span class="pull-right text-success"><i class="fa fa-link fa-lg"></i></span>
                   </div>
-                  <div class="form-group">
-                    <select data-placeholder="Search" class="chosen-select" multiple style="width:100%;" tabindex="4">
-                      <option value="">Search</option>
-                      <option value="United States">United States</option>
-                      <option value="United Kingdom">United Kingdom</option>
-                      <option value="Afghanistan">Afghanistan</option>
-                      <option value="Aland Islands">Aland Islands</option>
-                    </select>
+                  <div class="i-checks">
+                    <label>
+                      <input type="radio" value="option2" name="a" />
+                      <i></i> Unlinked
+                    </label>
+                    <span class="pull-right text-warning"><i class="fa fa-chain-broken fa-lg"></i></span>
                   </div>
-                  <div class="hr-line-dashed"></div>
-                  <h5>Product Link</h5>
-                  <div class="form-group">
-                    <div class="i-checks">
-                      <label>
-                        <input type="radio" value="option1" name="a" />
-                        <i></i> Linked
-                      </label>
-                      <span class="pull-right text-success"><i class="fa fa-link fa-lg"></i></span>
-                    </div>
-                    <div class="i-checks">
-                      <label>
-                        <input type="radio" value="option2" name="a" />
-                        <i></i> Unlinked
-                      </label>
-                      <span class="pull-right text-warning"><i class="fa fa-chain-broken fa-lg"></i></span>
-                    </div>
+                </div>
+                <div class="hr-line-dashed"></div>
+                <h5>Status</h5>
+                <div class="form-group">
+                  <div class="i-checks">
+                    <label>
+                      <input type="radio" value="option1" name="b" />
+                      <i></i> Edited
+                    </label>
+                    <span class="pull-right text-success"><i class="fa fa-pencil fa-lg"></i></span>
                   </div>
-                  <div class="hr-line-dashed"></div>
-                  <h5>Status</h5>
-                  <div class="form-group">
-                    <div class="i-checks">
-                      <label>
-                        <input type="radio" value="option1" name="b" />
-                        <i></i> Edited
-                      </label>
-                      <span class="pull-right text-success"><i class="fa fa-pencil fa-lg"></i></span>
-                    </div>
-                    <div class="i-checks">
-                      <label>
-                        <input type="radio" value="option2" name="b" />
-                        <i></i> Publishing
-                      </label>
-                      <span class="pull-right text-info"><i class="fa fa-refresh fa-lg"></i></span>
-                    </div>
-                    <div class="i-checks">
-                      <label>
-                        <input type="radio" value="option3" name="b" />
-                        <i></i> Warnings
-                      </label>
-                      <span class="pull-right text-warning"><i class="fa fa-exclamation-triangle fa-lg"></i></span>
-                    </div>
-                    <div class="i-checks">
-                      <label>
-                        <input type="radio" value="option4" name="b" />
-                        <i></i> Errors
-                      </label>
-                      <span class="pull-right text-danger"><i class="fa fa-exclamation-circle fa-lg"></i></span>
-                    </div>
+                  <div class="i-checks">
+                    <label>
+                      <input type="radio" value="option2" name="b" />
+                      <i></i> Publishing
+                    </label>
+                    <span class="pull-right text-info"><i class="fa fa-refresh fa-lg"></i></span>
                   </div>
-                  <div class="hr-line-dashed"></div>
-                  <h5>Price</h5>
-                  <div class="row">
-                    <div class="col-lg-6 form-group">
-                      <label>From</label>
-                      <div class="input-group">
-                        <span class="input-group-addon">$</span>
-                        <input type="text" class="form-control" placeholder="">
-                      </div>
-                    </div>
-                    <div class="col-lg-6 form-group">
-                      <label>To</label>
-                      <div class="input-group">
-                        <span class="input-group-addon">$</span>
-                        <input type="text" class="form-control" placeholder="">
-                      </div>
+                  <div class="i-checks">
+                    <label>
+                      <input type="radio" value="option3" name="b" />
+                      <i></i> Warnings
+                    </label>
+                    <span class="pull-right text-warning"><i class="fa fa-exclamation-triangle fa-lg"></i></span>
+                  </div>
+                  <div class="i-checks">
+                    <label>
+                      <input type="radio" value="option4" name="b" />
+                      <i></i> Errors
+                    </label>
+                    <span class="pull-right text-danger"><i class="fa fa-exclamation-circle fa-lg"></i></span>
+                  </div>
+                </div>
+                <div class="hr-line-dashed"></div>
+                <h5>Price</h5>
+                <div class="row">
+                  <div class="col-lg-6 form-group">
+                    <label>From</label>
+                    <div class="input-group">
+                      <span class="input-group-addon">$</span>
+                      <input type="text" class="form-control" placeholder="">
                     </div>
                   </div>
-                  <div class="hr-line-dashed"></div>
-                  <div class="row">
-                    <div class="col-lg-6">
-                      <button type="button" class="btn btn-primary btn-block">
-                        Apply filter
-                      </button>
+                  <div class="col-lg-6 form-group">
+                    <label>To</label>
+                    <div class="input-group">
+                      <span class="input-group-addon">$</span>
+                      <input type="text" class="form-control" placeholder="">
                     </div>
-                    <div class="col-lg-6">
-                      <button type="button" class="btn btn-default btn-block">
-                        Clear filter
-                      </button>
-                    </div>
+                  </div>
+                </div>
+                <div class="hr-line-dashed"></div>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <button type="button" class="btn btn-primary btn-block">
+                      Apply filter
+                    </button>
+                  </div>
+                  <div class="col-lg-6">
+                    <button type="button" class="btn btn-default btn-block">
+                      Clear filter
+                    </button>
                   </div>
                 </div>
               </div>
@@ -1818,7 +1816,7 @@
                           </ul>
                         </nav>
                       </div>
-                      <div class="clear-fix"></div>
+                      <div class="clearfix"></div>
                     </div>
                   </div>
                 </div>
