--- a/listing-detail.html
+++ b/listing-detail.html
@@ -194,9 +194,10 @@
                 </div>
                 <div class="col-sm-8">
                     <div class="title-action">
-                        <button type="button" class="btn btn-default">Publish</button>
-                        <button type="button" class="btn btn-default">Save Changes</button>
-                        <button type="button" class="btn btn-default">Delete</button>
+                        <button type="button" class="btn btn-info"><i class="fa fa-refresh"></i> Publish</button>
+                        <button type="button" class="btn btn-primary"><i class="fa fa-floppy-o"></i> Save
+                            Changes</button>
+                        <button type="button" class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete</button>
                     </div>
                 </div>
             </div>
@@ -228,7 +229,146 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-lg-9">
+                        <div class="alert alert-info alert-icon">
+                            <span class="icon"><i class="fa fa-comment"></i></span>
+                            <span class="text">This is an unplublished draft
+                                listing.</span>
+                        </div>
+                        <div class="tabs-container">
+                            <ul class="nav nav-tabs order-tab">
+                                <li class="primary active"><a data-toggle="tab" href="#tab-title">Title &
+                                        Description</a></li>
+                                <li class="primary"><a data-toggle="tab" href="#tab-images">Images</a></li>
+                                <li class="primary"><a data-toggle="tab" href="#tab-price">Price & Quantity</a></li>
+                                <li class="primary"><a data-toggle="tab" href="#tab-category">Category & Format</a></li>
+                                <li class="primary"><a data-toggle="tab" href="#tab-shipping">Shipping</a></li>
+                                <li class="primary"><a data-toggle="tab" href="#tab-payment">Payment & Returns</a></li>
+                                <li class="primary"><a data-toggle="tab" href="#tab-activity">Activity Log</a></li>
+                            </ul>
+                            <div class="tab-content">
+                                <div id="tab-title" class="tab-pane fade in active">
+                                    <div class="panel-body">
+                                        <strong>Lorem ipsum dolor sit amet, consectetuer adipiscing</strong>
 
+                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet
+                                            mornings of spring which I enjoy with my whole heart. I am alone, and feel
+                                            the charm of
+                                            existence in this spot, which was created for the bliss of souls like mine.
+                                        </p>
+
+                                        <p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere
+                                            tranquil existence, that I neglect my talents. I should be incapable of
+                                            drawing a single stroke at
+                                            the present moment; and yet I feel that I never was a greater artist than
+                                            now. When.</p>
+                                    </div>
+                                </div>
+                                <div id="tab-images" class="tab-pane fade">
+                                    <div class="panel-body">
+                                        <strong>Donec quam felis</strong>
+
+                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little
+                                            world among the stalks, and grow familiar with the countless indescribable
+                                            forms of the insects
+                                            and flies, then I feel the presence of the Almighty, who formed us in his
+                                            own image, and the breath </p>
+
+                                        <p>I am alone, and feel the charm of existence in this spot, which was created
+                                            for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
+                                            in the exquisite
+                                            sense of mere tranquil existence, that I neglect my talents. I should be
+                                            incapable of drawing a single stroke at the present moment; and yet.</p>
+                                    </div>
+                                </div>
+                                <div id="tab-price" class="tab-pane fade">
+                                    <div class="panel-body">
+                                        <strong>Donec quam felis</strong>
+
+                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little
+                                            world among the stalks, and grow familiar with the countless indescribable
+                                            forms of the insects
+                                            and flies, then I feel the presence of the Almighty, who formed us in his
+                                            own image, and the breath </p>
+
+                                        <p>I am alone, and feel the charm of existence in this spot, which was created
+                                            for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
+                                            in the exquisite
+                                            sense of mere tranquil existence, that I neglect my talents. I should be
+                                            incapable of drawing a single stroke at the present moment; and yet.</p>
+                                    </div>
+                                </div>
+                                <div id="tab-category" class="tab-pane fade">
+                                    <div class="panel-body">
+                                        <strong>Donec quam felis</strong>
+
+                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little
+                                            world among the stalks, and grow familiar with the countless indescribable
+                                            forms of the insects
+                                            and flies, then I feel the presence of the Almighty, who formed us in his
+                                            own image, and the breath </p>
+
+                                        <p>I am alone, and feel the charm of existence in this spot, which was created
+                                            for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
+                                            in the exquisite
+                                            sense of mere tranquil existence, that I neglect my talents. I should be
+                                            incapable of drawing a single stroke at the present moment; and yet.</p>
+                                    </div>
+                                </div>
+                                <div id="tab-shipping" class="tab-pane fade">
+                                    <div class="panel-body">
+                                        <strong>Donec quam felis</strong>
+
+                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little
+                                            world among the stalks, and grow familiar with the countless indescribable
+                                            forms of the insects
+                                            and flies, then I feel the presence of the Almighty, who formed us in his
+                                            own image, and the breath </p>
+
+                                        <p>I am alone, and feel the charm of existence in this spot, which was created
+                                            for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
+                                            in the exquisite
+                                            sense of mere tranquil existence, that I neglect my talents. I should be
+                                            incapable of drawing a single stroke at the present moment; and yet.</p>
+                                    </div>
+                                </div>
+                                <div id="tab-payment" class="tab-pane fade">
+                                    <div class="panel-body">
+                                        <strong>Donec quam felis</strong>
+
+                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little
+                                            world among the stalks, and grow familiar with the countless indescribable
+                                            forms of the insects
+                                            and flies, then I feel the presence of the Almighty, who formed us in his
+                                            own image, and the breath </p>
+
+                                        <p>I am alone, and feel the charm of existence in this spot, which was created
+                                            for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
+                                            in the exquisite
+                                            sense of mere tranquil existence, that I neglect my talents. I should be
+                                            incapable of drawing a single stroke at the present moment; and yet.</p>
+                                    </div>
+                                </div>
+                                <div id="tab-activity" class="tab-pane fade">
+                                    <div class="panel-body">
+                                        <strong>Donec quam felis</strong>
+
+                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little
+                                            world among the stalks, and grow familiar with the countless indescribable
+                                            forms of the insects
+                                            and flies, then I feel the presence of the Almighty, who formed us in his
+                                            own image, and the breath </p>
+
+                                        <p>I am alone, and feel the charm of existence in this spot, which was created
+                                            for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
+                                            in the exquisite
+                                            sense of mere tranquil existence, that I neglect my talents. I should be
+                                            incapable of drawing a single stroke at the present moment; and yet.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
                     </div>
                 </div>
             </div>
