--- a/listing.html
+++ b/listing.html
@@ -40,16 +40,16 @@
             </div>
           </li>
           <li class="active">
-            <a href="layouts.html"><i class="fa fa-list-ol"></i>
+            <a href="listing.html"><i class="fa fa-list-ol"></i>
               <span class="nav-label">Listing</span></a>
           </li>
           <li>
-            <a href="metrics.html"><i class="fa fa-tasks"></i>
+            <a href="chanels.html"><i class="fa fa-tasks"></i>
               <span class="nav-label">Chanels</span>
             </a>
           </li>
           <li>
-            <a href="widgets.html"><i class="fa fa-cog"></i>
+            <a href="settings.html"><i class="fa fa-cog"></i>
               <span class="nav-label">Settings</span></a>
           </li>
         </ul>
